--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
     <title>Practice Web Site</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <p>I am a practice website</p>
-    <button id="cat-button">Click for cat</button>
-    <img
-      id="cat-image"
-      src="https://images.unsplash.com/photo-1519052537078-e6302a4968d4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
-      alt="a nice cat"
-    />
+    <header>
+      <h1>HELLO WORLD!</h1>
+    </header>
+
+    <section>
+      <p>I am a practice website</p>
+      <button id="cat-button">Click for cat</button>
+      <img
+        id="cat-image"
+        src="https://images.unsplash.com/photo-1519052537078-e6302a4968d4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+        alt="a nice cat"
+      />
+    </section>
 
     <!-- links to your scripts go here. Libraries should be loaded before files -->
     <script
