--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 
     <div class="grid-container" id="grid-item-1">
       <div class="grid-item">
-        <p><strong>.toggle()</strong></p>
+        <div class="content-container">
+        <h4><strong>.toggle()</strong></h4>
         <button id="cat-button">Click to toggle</button>
+      </div>
         <div class="image-container">
           <img
             id="cat-image"
@@ -29,8 +31,10 @@
       </div>
 
       <div class="grid-item" id="grid-item-2">
-        <p><strong>.show()</strong> and <strong>.hide()</strong></p>
+        <div class="content-container">
+        <h4><strong>.show()</strong> and <strong>.hide()</strong></h4>
         <span>Trigger with mouseenter and mouseleave</span>
+      </div>
         <div class="image-container">
           <img
             id="mystery-image"
@@ -47,10 +51,12 @@
       </div>
 
       <div class="grid-item" id="grid-item-3">
-        <p><strong>.fadeIn()</strong> and <strong>.fadeOut()</strong></p>
+        <div class="content-container">
+        <h4><strong>.fadeIn()</strong> and <strong>.fadeOut()</strong></h4>
         <div class="button-container">
           <button id="fadeOut-button">fade Out</button>
           <button id="fadeIn-button">fade In</button>
+        </div>
         </div>
         <div class="image-container">
           <img
